--- a/src/com/floreantpos/report/template/drawer-pull-report.jrxml
+++ b/src/com/floreantpos/report/template/drawer-pull-report.jrxml
@@ -2,9 +2,9 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="DrawerPullJReport" pageWidth="226" pageHeight="550" columnWidth="224" leftMargin="1" rightMargin="1" topMargin="1" bottomMargin="1" isIgnorePagination="true">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.6105100000000008"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="237"/>
+	<property name="ireport.y" value="334"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -160,6 +160,9 @@
 	<field name="currencyBalances" class="java.util.Set">
 		<fieldDescription><![CDATA[currencyBalances]]></fieldDescription>
 	</field>
+	<field name="refundAmount" class="java.lang.Double">
+		<fieldDescription><![CDATA[refundAmount]]></fieldDescription>
+	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -226,7 +229,7 @@
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="500" splitType="Stretch">
+		<band height="520" splitType="Stretch">
 			<staticText>
 				<reportElement key="staticText-1" x="0" y="7" width="224" height="15"/>
 				<box>
@@ -377,7 +380,7 @@
 				<text><![CDATA[+GIFT CERT. CHANGE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-14" x="0" y="187" width="120" height="15"/>
+				<reportElement key="staticText-14" x="0" y="202" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -390,13 +393,13 @@
 				<text><![CDATA[+CASH BACK]]></text>
 			</staticText>
 			<line>
-				<reportElement key="line-3" x="0" y="202" width="224" height="1"/>
+				<reportElement key="line-3" x="0" y="217" width="224" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement key="staticText-15" x="-1" y="204" width="120" height="15"/>
+				<reportElement key="staticText-15" x="-1" y="219" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -409,7 +412,7 @@
 				<text><![CDATA[=RECEIPT DIFFERENTIAL]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-16" x="0" y="226" width="120" height="15"/>
+				<reportElement key="staticText-16" x="0" y="241" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -422,7 +425,7 @@
 				<text><![CDATA[+CHARGED TIPS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-17" x="0" y="241" width="120" height="15"/>
+				<reportElement key="staticText-17" x="0" y="256" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -435,13 +438,13 @@
 				<text><![CDATA[-TIPS PAID]]></text>
 			</staticText>
 			<line>
-				<reportElement key="line-4" x="0" y="256" width="224" height="1"/>
+				<reportElement key="line-4" x="0" y="271" width="224" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement key="staticText-18" x="-1" y="258" width="120" height="15"/>
+				<reportElement key="staticText-18" x="-1" y="273" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -454,7 +457,7 @@
 				<text><![CDATA[=TIPS DIFFERENTIAL]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-20" x="0" y="302" width="120" height="15"/>
+				<reportElement key="staticText-20" x="0" y="318" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -467,7 +470,7 @@
 				<text><![CDATA[   CASH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-21" x="0" y="347" width="120" height="15"/>
+				<reportElement key="staticText-21" x="0" y="380" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -480,7 +483,7 @@
 				<text><![CDATA[-CASH BACK]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-22" x="0" y="332" width="120" height="15"/>
+				<reportElement key="staticText-22" x="0" y="348" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -493,7 +496,7 @@
 				<text><![CDATA[-PAY OUT]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-23" x="0" y="317" width="120" height="15"/>
+				<reportElement key="staticText-23" x="0" y="333" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -506,13 +509,13 @@
 				<text><![CDATA[-TIPS PAID]]></text>
 			</staticText>
 			<line>
-				<reportElement key="line-5" x="0" y="392" width="224" height="1"/>
+				<reportElement key="line-5" x="0" y="425" width="224" height="1"/>
 				<graphicElement>
 					<pen lineWidth="0.5" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement key="staticText-24" x="-1" y="362" width="120" height="15"/>
+				<reportElement key="staticText-24" x="-1" y="395" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -525,7 +528,7 @@
 				<text><![CDATA[+BEGIN CASH]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-25" x="0" y="394" width="120" height="15"/>
+				<reportElement key="staticText-25" x="0" y="427" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -538,7 +541,7 @@
 				<text><![CDATA[=DRAWER ACCOUNTABLE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-26" x="0" y="377" width="120" height="15"/>
+				<reportElement key="staticText-26" x="0" y="410" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -551,7 +554,7 @@
 				<text><![CDATA[-DRAWER BLEED]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-27" x="0" y="409" width="120" height="15"/>
+				<reportElement key="staticText-27" x="0" y="442" width="120" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -564,7 +567,7 @@
 				<text><![CDATA[>CASH TO DEPOSIT]]></text>
 			</staticText>
 			<subreport>
-				<reportElement x="0" y="460" width="222" height="38"/>
+				<reportElement x="0" y="494" width="222" height="21"/>
 				<subreportParameter name="totalVoid">
 					<subreportParameterExpression><![CDATA[$P{totalVoid}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -642,42 +645,42 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{giftCertReturnAmount})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="187" width="100" height="15"/>
+				<reportElement x="123" y="202" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{cashBack})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="204" width="100" height="15"/>
+				<reportElement x="123" y="219" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{receiptDifferential})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="226" width="100" height="15"/>
+				<reportElement x="123" y="241" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{chargedTips})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="241" width="100" height="15"/>
+				<reportElement x="123" y="256" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{tipsPaid})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="258" width="100" height="15"/>
+				<reportElement x="123" y="273" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{tipsDifferential})]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-1" x="-1" y="280" width="224" height="15"/>
+				<reportElement key="staticText-1" x="-1" y="296" width="224" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -690,66 +693,106 @@
 				<text><![CDATA[CASH BALANCE]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="123" y="302" width="100" height="15"/>
+				<reportElement x="123" y="318" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{cashReceiptAmount})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="317" width="100" height="15"/>
+				<reportElement x="123" y="333" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{tipsPaid})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="332" width="100" height="15"/>
+				<reportElement x="123" y="348" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{payOutAmount})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="347" width="100" height="15"/>
+				<reportElement x="123" y="380" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{cashBack})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="362" width="100" height="15"/>
+				<reportElement x="123" y="395" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{beginCash})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="377" width="100" height="15"/>
+				<reportElement x="123" y="410" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{drawerBleedAmount})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="394" width="100" height="15"/>
+				<reportElement x="123" y="427" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{drawerAccountable})]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="123" y="409" width="100" height="15"/>
+				<reportElement x="123" y="442" width="100" height="15"/>
 				<textElement textAlignment="Right">
 					<font size="9"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{cashToDeposit})]]></textFieldExpression>
 			</textField>
 			<subreport>
-				<reportElement x="0" y="429" width="222" height="26"/>
+				<reportElement x="-1" y="464" width="222" height="26"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{currencyBalances})]]></dataSourceExpression>
 				<subreportExpression class="net.sf.jasperreports.engine.JasperReport"><![CDATA[$P{currencyBalanceReport}]]></subreportExpression>
 			</subreport>
+			<textField>
+				<reportElement x="123" y="187" width="100" height="15"/>
+				<textElement textAlignment="Right">
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{refundAmount})]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement key="staticText-14" x="0" y="187" width="120" height="15"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<text><![CDATA[+REFUND]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="123" y="364" width="100" height="15"/>
+				<textElement textAlignment="Right">
+					<font size="9"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[new java.text.DecimalFormat("0.00").format($F{refundAmount})]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement key="staticText-21" x="0" y="364" width="120" height="15"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="9"/>
+				</textElement>
+				<text><![CDATA[-REFUND]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<columnFooter>
