--- a/src/com/floreantpos/report/template/sales_summary_balance_report.jrxml
+++ b/src/com/floreantpos/report/template/sales_summary_balance_report.jrxml
@@ -4,7 +4,7 @@
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.8660295208389335"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="806"/>
+	<property name="ireport.y" value="736"/>
 	<import value="net.sf.jasperreports.engine.*"/>
 	<import value="java.util.*"/>
 	<import value="net.sf.jasperreports.engine.data.*"/>
@@ -1414,7 +1414,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-24" x="268" y="354" width="166" height="15"/>
+				<reportElement key="textField-24" x="268" y="354" width="166" height="15" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -1425,7 +1425,9 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{totalTips}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-50" x="263" y="354" width="5" height="15"/>
+				<reportElement key="staticText-50" x="263" y="354" width="5" height="15" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{totalTips} != null]]></printWhenExpression>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -1436,7 +1438,7 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement key="textField-24" x="268" y="338" width="166" height="15"/>
+				<reportElement key="textField-24" x="268" y="338" width="166" height="15" isRemoveLineWhenBlank="true"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -1447,7 +1449,9 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{totalReceipts}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-50" x="263" y="338" width="5" height="15"/>
+				<reportElement key="staticText-50" x="263" y="338" width="5" height="15" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{totalReceipts} != null]]></printWhenExpression>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -1458,7 +1462,9 @@
 				<text><![CDATA[:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-49" x="97" y="354" width="166" height="15"/>
+				<reportElement key="staticText-49" x="97" y="354" width="166" height="15" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{totalTips} != null]]></printWhenExpression>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -1469,7 +1475,9 @@
 				<text><![CDATA[TOTAL TIPS]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-49" x="97" y="339" width="166" height="15"/>
+				<reportElement key="staticText-49" x="97" y="339" width="166" height="15" isRemoveLineWhenBlank="true">
+					<printWhenExpression><![CDATA[$P{totalReceipts} != null]]></printWhenExpression>
+				</reportElement>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
